# cowsay

./: .drone.yml  .gitignore  Makefile.am  README.rst  configure.ac
src/: Makefile.am  cowsay.c
